--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,8 @@
 .ease {
   transition-timing-function: ease;
 }
+.clip {
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  transition: clip-path 2s ease-in-out, -webkit-clip-path 2s ease-in-out;
+}
